Colab을 통해 생성됨

--- a/python3basic.ipynb
+++ b/python3basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONKhb0gG2pIMQCYeUq7yIP",
+      "authorship_tag": "ABX9TyMkdslDKKZ56mbOXwChKNEy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,7 +79,7 @@
         "id": "H__Bj74vKlt0",
         "outputId": "bc72d274-b597-4be5-f801-ec3d3067dfe6"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,10 +92,23 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "3. Python Comments"
+      ],
       "metadata": {
         "id": "MrjKq7phK3af"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#This is comment\n"
+      ],
+      "metadata": {
+        "id": "fPPHgeY7LNon"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
